refactor(user): update the user service to use sessions